[TESTS][UIMAP][HELPER] MAUTOSEL-426 Fix tests

--- a/fixture/enterprise/core/Mage/Checkout/data/OnePageCheckout.yml
+++ b/fixture/enterprise/core/Mage/Checkout/data/OnePageCheckout.yml
@@ -55,10 +55,19 @@ billing_new_signedin_req_physical_withshipping_usa: &billing_new_signedin_with_s
 #                           Order Data for Gift Wrapping                       #
 #                                                                              #
 ################################################################################
+order_gift_wrapping:
+    entire_order: &orderGiftWrapping
+        order_gift_wrapping_design: %gift_wrapping_design%
+
+items_gift_wrapping:
+    individual_items:
+        item_1:
+            product_name: %product_1%
+            item_gift_wrapping_design: %gift_wrapping_design%
 
 gift_message_with_gift_wrapping_one_page: &giftOptionsOnePage
     entire_order:
-        order_gift_wrapping_design: %noValue%
+        order_gift_wrapping_design: %gift_wrapping_design%
         gift_message:
             order_gift_message_from: From_%randomize%
             order_gift_message_to: To_%randomize%'
@@ -66,27 +75,26 @@ gift_message_with_gift_wrapping_one_page: &giftOptionsOnePage
     individual_items: %noValue%
 
 gift_message_gift_receipt:
-    entire_order:
         send_gift_receipt: Yes
 
-gift_message_gift_wrapping:
-    entire_order:
-        order_gift_wrapping_design: %noValue%
-    individual_items: %noValue%
-
 gift_message_gift_printed_card:
-    entire_order:
         add_printed_card: Yes
 
-gift_message_for_individual_items_one_page:
-    item_gift_message_from: From_%randomize%
-    item_gift_message_to: To_%randomize%'
-    item_gift_message: %randomize%_message
+gift_message_for_individual_items_one_page: &giftMsgForItemsOnePage
+    item_1:
+        product_name: %product_1%
+        item_gift_wrapping_design: %gift_wrapping_design%
+        gift_message:
+            item_gift_message_from: From_%randomize%
+            item_gift_message_to: To_%randomize%'
+            item_gift_message: %randomize%_message
 
 gift_data_general: &giftDataGeneral
-    products_to_add: &product_add_one
+    products_to_add: &product_add
         product_1:
             general_name: %product_1%
+        product_2:
+            general_name: %product_2%
     billing_address_data: *billing_new_signedin_with_shipping_usa
     payment_data: &payment_check_money
         payment_method: Check / Money order
@@ -100,66 +108,39 @@ gift_data_general: &giftDataGeneral
 
 verify_gift_data:
     entire_order:
-        order_gift_message_from: %noValue%
-        order_gift_message_to: %noValue%
-        order_gift_message: %noValue%
-        order_gift_wrapping_design: %noValue%
-        order_gift_wrapping_price: %noValue%
+        from_order_level: %noValue%
+        to_order_level: %noValue%
+        message_order_level: %noValue%
     individual:
         product_1:
             sku_product: %noValue%
-            product_gift_message_from: %noValue%
-            product_gift_message_to: %noValue%
-            product_gift_message: %noValue%
-            product_gift_wrapping_design: %noValue%
-            product_gift_wrapping_price: %noValue%
+            from: %noValue%
+            to: %noValue%
+            message: %noValue%
 
-validate_total_gift_wrapping:
-    validate_prod_data:
+verify_wrapping_data:
+    entire_order:
+        gift_wrapping: %gift_wrapping_design%
+        order_gift_wrapping_price: %price_order%
+        printed_card_price: %noValue%
+    individual:
         product_1:
-            product_name: %noValue%
-            price: $12.99
-            qty: 1
-            subtotal: $12.99
-    validate_total_data:
-        grand_total: %noValue%
-        gift_wrapping_for_items: %noValue%
-        gift_wrapping_for_order: %noValue%
-        shipping_handling_flat_rate_fixed: $5.00
-        subtotal: $12.99
-
-gift_data_general_for_website_scope:
-    products_to_add: *product_add_one
-    billing_address_data: *billing_new_signedin_with_shipping_usa
-    shipping_data:
-        <<: *shipping_flat_rate
-        add_gift_options:
-            add_gift_options: Yes
-            send_gift_receipt: Yes
-            add_printed_card: Yes
-            entire_order:
-                order_gift_wrapping_design: %noValue%
-                gift_message:
-                    order_gift_message_from: From_%randomize%
-                    order_gift_message_to: To_%randomize%'
-                    order_gift_message: %randomize%_message
-            individual_items: %noValue%
-    payment_data: *payment_check_money
-
-gift_message_for_individual_items_one_page_website:
-    item_gift_wrapping_design: %noValue%
-    gift_messsage:
-        item_gift_message_from: From_%randomize%
-        item_gift_message_to: To_%randomize%'
-        item_gift_message: %randomize%_message
+            sku_product: %sku_product_1%
+            item_gift_wrapping_price: %price_product_1%
+            gift_wrapping: %gift_wrapping_design%
+        product_2:
+            sku_product: %sku_product_2%
+            item_gift_wrapping_price: %price_product_2%
+            gift_wrapping: %gift_wrapping_design%
 
 recount_gift_wrapping_no_img_one_page:
-    products_to_add: *product_add_one
+    products_to_add: *product_add
     billing_address_data: *billing_new_signedin_with_shipping_usa
     shipping_data:
         <<: *shipping_flat_rate
         add_gift_options:
-            individual_items: %noValue%
+            individual_items: *giftMsgForItemsOnePage
+            entire_order: *orderGiftWrapping
     payment_data: *payment_check_money
     validate_prod_data:
         product_1:
@@ -175,7 +156,7 @@ recount_gift_wrapping_no_img_one_page:
         subtotal: $12.99
 
 recount_gift_wrapping_with_img_one_page:
-    products_to_add: *product_add_one
+    products_to_add: *product_add
     billing_address_data: *billing_new_signedin_with_shipping_usa
     shipping_data:
         <<: *shipping_flat_rate
@@ -183,7 +164,7 @@ recount_gift_wrapping_with_img_one_page:
     payment_data: *payment_check_money
     validate_prod_data:
         product_1:
-            product_name: %noValue%
+            product_name: %validate_product_1%
             price: $12.99
             qty: 1
             subtotal: $12.99
@@ -195,7 +176,7 @@ recount_gift_wrapping_with_img_one_page:
         subtotal: $12.99
 
 recount_no_gift_wrapping_one_page:
-    products_to_add: *product_add_one
+    products_to_add: *product_add
     billing_address_data: *billing_new_signedin_with_shipping_usa
     shipping_data:
         <<: *shipping_flat_rate
@@ -203,7 +184,7 @@ recount_no_gift_wrapping_one_page:
     payment_data: *payment_check_money
     validate_prod_data:
         product_1:
-            product_name: %noValue%
+            product_name: %validate_product_1%
             price: $12.99
             qty: 1
             subtotal: $12.99
@@ -213,7 +194,7 @@ recount_no_gift_wrapping_one_page:
         subtotal: $12.99
 
 recount_gift_wrapping_printed_card_yes_one_page:
-    products_to_add: *product_add_one
+    products_to_add: *product_add
     billing_address_data: *billing_new_signedin_with_shipping_usa
     shipping_data:
         <<: *shipping_flat_rate
@@ -222,7 +203,7 @@ recount_gift_wrapping_printed_card_yes_one_page:
     payment_data: *payment_check_money
     validate_prod_data:
         product_1:
-            product_name: %noValue%
+            product_name: %product_1%
             price: $12.99
             qty: 1
             subtotal: $12.99
@@ -233,7 +214,7 @@ recount_gift_wrapping_printed_card_yes_one_page:
         subtotal: $12.99
 
 recount_gift_wrapping_printed_card_no_one_page:
-    products_to_add: *product_add_one
+    products_to_add: *product_add
     billing_address_data: *billing_new_signedin_with_shipping_usa
     shipping_data:
         <<: *shipping_flat_rate
@@ -242,7 +223,7 @@ recount_gift_wrapping_printed_card_no_one_page:
     payment_data: *payment_check_money
     validate_prod_data:
         product_1:
-            product_name: %noValue%
+            product_name: %product_1%
             price: $12.99
             qty: 1
             subtotal: $12.99
@@ -252,49 +233,63 @@ recount_gift_wrapping_printed_card_no_one_page:
         subtotal: $12.99
 
 gift_wrapping_custom_price:
-    products_to_add: *product_add_one
+    products_to_add: *product_add
     billing_address_data: *billing_new_signedin_with_shipping_usa
     shipping_data:
         <<: *shipping_flat_rate
         add_gift_options:
-            entire_order: %noValue%
-            individual_items: %noValue%
+            entire_order:
+                order_gift_wrapping_design: %gift_wrapping_design%
+            individual_items:
+                item_1:
+                    product_name: %product_1%
+                    item_gift_wrapping_design: %gift_wrapping_design%
+                item_2:
+                    product_name: %product_2%
+                    item_gift_wrapping_design: %gift_wrapping_design%
     payment_data: *payment_check_money
     validate_prod_data:
         product_1:
-            product_name: %noValue%
+            product_name: %validate_product_1%
             price: $12.99
             qty: 1
             subtotal: $12.99
         product_2:
-            product_name: %noValue%
+            product_name: %validate_product_2%
             price: $12.99
             qty: 1
             subtotal: $12.99
     validate_total_data:
-        grand_total: $65.52
+        grand_total: $77.29
         gift_wrapping_for_order: %noValue%
         gift_wrapping_for_items: %noValue%
         shipping_handling_flat_rate_fixed: $10.00
         subtotal: $25.98
 
 gift_wrapping_custom_price_on_site:
-    products_to_add: *product_add_one
+    products_to_add: *product_add
     billing_address_data: *billing_new_signedin_with_shipping_usa
     shipping_data:
         <<: *shipping_flat_rate
         add_gift_options:
-            entire_order: %noValue%
-            individual_items: %noValue%
+            entire_order:
+                order_gift_wrapping_design: %gift_wrapping_design%
+            individual_items:
+                item_1:
+                    product_name: %product_1%
+                    item_gift_wrapping_design: %gift_wrapping_design%
+                item_2:
+                    product_name: %product_2%
+                    item_gift_wrapping_design: %gift_wrapping_design%
     payment_data: *payment_check_money
     validate_prod_data:
         product_1:
-            product_name: %noValue%
+            product_name: %validate_product_1%
             price: $12.99
             qty: 1
             subtotal: $12.99
         product_2:
-            product_name: %noValue%
+            product_name: %validate_product_2%
             price: $12.99
             qty: 1
             subtotal: $12.99
