--- a/fixture/enterprise/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
+++ b/fixture/enterprise/core/Mage/Checkout/uimap/admin/AdminCheckout.yml
@@ -35,6 +35,8 @@ view_order:
                            -
                               gift_options_for_order:
                                   xpath: //div[div/h4[contains(text(),'Gift Options')]]
+                                  checkboxes:
+                                      add_printed_card: //input[@id='add-printed-card']
                                   pageelements:
                                       printed_card_price: //div[@id='price-card-box']//span[@class='price']//span[@class='price']
                                       order_gift_wrapping_price: //div[@class='gift-wrapping-design']//div[@id='price-box']//span[@class='price']/span
@@ -44,6 +46,11 @@ view_order:
                                   pageelements:
                                       item_gift_wrapping_price: //div[@class='gift-wrapping-design']//span[@class='price']//span[@class='price']
                                       gift_wrapping: //div[@class='gift-wrapping-design']/span
+                           -
+                              order_totals:
+                                  xpath: //div[@class='order-totals']
+                                  pageelements:
+                                      total_printed_card_price: //tr[normalize-space(td)='Printed Card']/td/span
 
 # 'New Order' page
 create_order_for_new_customer:
@@ -65,3 +72,5 @@ create_order_for_new_customer:
                         checkboxes:
                             send_gift_receipt: //input[@id='allow-gift-receipt']
                             add_printed_card: //input[@id='add-printed-card']
+                        pageelements:
+                            printed_card_price: //div[@id='card-price-box']//span[@id='card-price']
