[TESTS] replaced function loadData to loadDataSet

--- a/fixture/default/core/Mage/CmsWidget/data/CmsWidget.yml
+++ b/fixture/default/core/Mage/CmsWidget/data/CmsWidget.yml
@@ -54,17 +54,17 @@ cms_page_link_widget:
             select_template: CMS Page Link Block Template
             choose_options:
                 product_1:
-                    filter_sku: %noValue%
+                    filter_sku: %product_1%
                 product_2:
-                    filter_sku: %noValue%
+                    filter_sku: %product_2%
                 product_3:
-                    filter_sku: %noValue%
+                    filter_sku: %product_3%
                 product_4:
-                    filter_sku: %noValue%
+                    filter_sku: %product_4%
                 product_5:
-                    filter_sku: %noValue%
+                    filter_sku: %product_5%
                 product_6:
-                    filter_sku: %noValue%
+                    filter_sku: %product_6%
         layout_4:
             select_display_on: Simple Product
             select_block_reference: Page Bottom
@@ -768,7 +768,7 @@ cms_page_link_widget_req:
         design_package_theme: base / default
     frontend_properties:
         assign_to_store_views: All Store Views
-        widget_instance_title: test
+        widget_instance_title: CMS Page Link %randomize%
     layout_updates:
         layout_1:
             select_display_on: Anchor Categories
@@ -785,7 +785,7 @@ cms_static_block_widget_req:
         design_package_theme: base / default
     frontend_properties:
         assign_to_store_views: All Store Views
-        widget_instance_title: test
+        widget_instance_title: CMS Static Block %randomize%
     layout_updates:
         layout_1:
             select_display_on: Anchor Categories
@@ -801,7 +801,7 @@ catalog_category_link_widget_req:
         design_package_theme: base / default
     frontend_properties:
         assign_to_store_views: All Store Views
-        widget_instance_title: test
+        widget_instance_title: Catalog Category Link %randomize%
     layout_updates:
         layout_1:
             select_display_on: Anchor Categories
@@ -820,7 +820,7 @@ catalog_new_products_list_widget_req:
         design_package_theme: base / default
     frontend_properties:
         assign_to_store_views: All Store Views
-        widget_instance_title: test
+        widget_instance_title: Catalog New Products List %randomize%
     layout_updates:
         layout_1:
             select_display_on: Anchor Categories
@@ -835,7 +835,7 @@ catalog_product_link_widget_req:
         design_package_theme: base / default
     frontend_properties:
         assign_to_store_views: All Store Views
-        widget_instance_title: test
+        widget_instance_title: Catalog Product Link %randomize%
     layout_updates:
         layout_1:
             select_display_on: Anchor Categories
@@ -852,7 +852,7 @@ orders_and_returns_widget_req:
         design_package_theme: base / default
     frontend_properties:
         assign_to_store_views: All Store Views
-        widget_instance_title: test
+        widget_instance_title: Orders and Returns %randomize%
     layout_updates:
         layout_1:
             select_display_on: Anchor Categories
@@ -866,7 +866,7 @@ recently_compared_products_widget_req:
         design_package_theme: base / default
     frontend_properties:
         assign_to_store_views: All Store Views
-        widget_instance_title: test
+        widget_instance_title: Recently Compared Products %randomize%
     layout_updates:
         layout_1:
             select_display_on: Anchor Categories
@@ -882,7 +882,7 @@ recently_viewed_products_widget_req:
         design_package_theme: base / default
     frontend_properties:
         assign_to_store_views: All Store Views
-        widget_instance_title: test
+        widget_instance_title: Recently Viewed Products %randomize%
     layout_updates:
         layout_1:
             select_display_on: Anchor Categories
