--- a/fixture/default/core/Mage/ShoppingCartPriceRule/data/ShoppingCartPriceRule.yml
+++ b/fixture/default/core/Mage/ShoppingCartPriceRule/data/ShoppingCartPriceRule.yml
@@ -205,25 +205,25 @@ specific_category_condition: &specificCategory
 
 scpr_required_fields:
     info:
-        rule_name: test_shopping_cart_rule
+        rule_name: test_shopping_cart_rule_%randomize%
         status: Inactive
         websites: Main Website
         customer_groups: NOT LOGGED IN, General, Wholesale, Retailer
         coupon: Specific Coupon
-        coupon_code: test_code
+        coupon_code: test_code_%randomize%
     actions:
         apply: Percent of product price discount
         discount_amount: 15
 
 scpr_all_fields:
     info:
-        rule_name: test_shopping_cart_rule
+        rule_name: test_shopping_cart_rule_%randomize%
         description: description for test shopping cart rule
         status: Inactive
         websites: Main Website
         customer_groups: NOT LOGGED IN, General, Wholesale, Retailer
         coupon: Specific Coupon
-        coupon_code: test_code
+        coupon_code: test_code_%randomize%
         uses_per_coupon: 15
         uses_per_customer: 15
         from_date: %currentDate%
