[TESTS] MAUTOSEL-278 Fix based on review results

--- a/fixture/enterprise/core/Mage/Checkout/data/OnePageCheckout.yml
+++ b/fixture/enterprise/core/Mage/Checkout/data/OnePageCheckout.yml
@@ -122,18 +122,18 @@ verify_gift_data:
 
 verify_wrapping_data:
     entire_order:
-        order_gift_wrapping_design: %gift_wrapping_design%
+        gift_wrapping: %gift_wrapping_design%
         order_gift_wrapping_price: %price_order%
         printed_card_price: %noValue%
     individual:
         product_1:
             sku_product: %sku_product_1%
             item_gift_wrapping_price: %price_product_1%
-            product_gift_wrapping_design: %gift_wrapping_design%
+            gift_wrapping: %gift_wrapping_design%
         product_2:
             sku_product: %sku_product_2%
             item_gift_wrapping_price: %price_product_2%
-            product_gift_wrapping_design: %gift_wrapping_design%
+            gift_wrapping: %gift_wrapping_design%
 
 recount_gift_wrapping_no_img_one_page:
     products_to_add: *product_add
