--- a/fixture/default/core/Mage/Checkout/uimap/frontend/OnePageCheckout.yml
+++ b/fixture/default/core/Mage/Checkout/uimap/frontend/OnePageCheckout.yml
@@ -167,6 +167,7 @@ onepage_checkout:
                             product_table_head: //table[@id='checkout-review-table']/thead
                             price_totals: //table[@id='checkout-review-table']/tfoot
                             product_line:  //table[@id='checkout-review-table']/tbody/tr
+                            product_gift_wrapping: //table[@id='checkout-review-table']/tbody//td[h3= '%productName%']//dd[contains(text(), '%giftWrapping%')]
                         fields:
                             product_name: //table[@id='checkout-review-table']/tbody//td[h3= '%productName%']
                             product_price: //table[@id='checkout-review-table']/tbody/tr[./td/h3[contains(.,'%productName%')]]/td[2]/span[contains(.,'%price%')]
