--- a/fixture/default/core/Mage/Customer/uimap/admin/Customers.yml
+++ b/fixture/default/core/Mage/Customer/uimap/admin/Customers.yml
@@ -73,6 +73,7 @@ manage_customers:
             password_too_short: //div[@id='advice-validate-password-_accountpassword']
             invalid_email: //div[@id='advice-validate-email-_accountemail']
             confirmation_for_delete: Are you sure you want to do this?
+            confirmation_for_delete_address: Are you sure you want to delete this address?
             confirmation_for_massaction_delete: Are you sure?
 
 # 'New Customer' Page
