--- a/fixture/default/core/Mage/Customer/uimap/frontend/Customer.yml
+++ b/fixture/default/core/Mage/Customer/uimap/frontend/Customer.yml
@@ -68,6 +68,7 @@ register_account:
 # 'Login or Create an Account' page
 customer_login:
     mca: customer/account/login/
+    click_xpath: //a[@title='Log In'][contains(@href,'/customer/account/login/')]
     title: Customer Login
     uimap:
         form: &customerLogin
