Fixed MAGETWO-1128: Update to Github (34-1) - removed colors from phpunit settings, because they pollute execution logs

--- a/dev/api-tests/unit/phpunit.xml.dist
+++ b/dev/api-tests/unit/phpunit.xml.dist
@@ -10,7 +10,7 @@
  * @license     {license_link}
  */
 -->
-<phpunit bootstrap="./framework/bootstrap.php" colors="true">
+<phpunit bootstrap="./framework/bootstrap.php">
     <testsuite name="Magento PaaS/Appstore Unit Tests">
         <directory suffix="Test.php">tests</directory>
     </testsuite>
