[HELPER] fixed function createPreconfiguredAccount() (If get error message after account creation)

--- a/fixture/default/core/Mage/_uimapIncludes/paypal_developer.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/paypal_developer.yml
@@ -30,3 +30,4 @@ paypal_developer:
             general_validation: "//*[@id='alert_content']/span[@class='details']"
             general_success: "//*[@id='alert_content']/span[@class='message']"
             general_error: "//*[@id='alert_content']/span[@class='error']"
+            failed_account_creation: "//*[@id='alert_content']/span[@class='error'][text()='The account creation process failed, resulting in an incomplete account profile. Please delete this account and start over']"
